<resources>
    <string name="app_name">Covivid</string>
    <string name="active_cases">Active cases</string>
    <string name="recovered">Recovered</string>
    <string name="total_cases">Total cases</string>
    <string name="deaths">Deaths</string>
    <string name="country_picker_hint">Choose country</string>
    <string name="compare_country_picker_hint">Choose second country</string>
    <string name="choose_date_range">Pick date range</string>
    <string name="date_range_picker_hint">Choose date range</string>

    <string name="retry">Retry</string>
    <string name="net_trouble_msg">You have no internet connection!</string>
    <string name="active">Active</string>
    <string name="no_news">Couldn\'t fetch the news.\n Try again later.</string>
    <string name="fight">Fought back</string>

</resources>