<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/compare_country_dropdown"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="256dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxStrokeColor="#ffa28b"
        app:endIconMode="dropdown_menu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/compare_country_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/compare_country_picker_hint"
            android:inputType="textFilter" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/compare_scroll_view"
        android:visibility="invisible"
        android:layout_marginTop="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/active_cases"
                android:textSize="@dimen/stats_text_size"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart_compare_active"
                android:layout_height="@dimen/chart_height"
                android:layout_width="match_parent"
                android:paddingBottom="64dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/total_cases"
                android:textSize="@dimen/stats_text_size"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart_compare_total"
                android:layout_height="@dimen/chart_height"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/deaths"
                android:textSize="@dimen/stats_text_size"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart_compare_deaths"
                android:layout_height="@dimen/chart_height"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/recovered"
                android:textSize="@dimen/stats_text_size"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart_compare_recovered"
                android:layout_height="@dimen/chart_height"
                android:layout_width="match_parent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>